# advanced-esp32-oscilloscope

./: .gitignore  .gitmodules
components/broadcaster/: broadcaster.c
espside/: sdkconfig  sdkconfig.old
espside/.cache/clangd/index/: broadcaster.c.4A2C96A3E3BD6C39.idx  broadcaster.h.B78EEB981C939066.idx  btconfig.c.C1A2702F7A8B509D.idx  btconfig.h.22AEDEEC07DE444E.idx  main.c.62890613324F6DAA.idx  wifi_teszt.c.5DBDAB531B176C04.idx
espside/main/: CMakeLists.txt  main.c
main/: CMakeLists.txt  main.c  wifi_teszt.c
pcside/: CMakeLists.txt  guifuncs.cpp  main.c  main.cpp  test.cpp
pcside/addrlist/: CMakeLists.txt  addrlist.c  addrlist.cpp
pcside/addrlist/include/: addrlist.h
pcside/devices/: CMakeLists.txt  devices.c  devices.cpp  ringBuffer.c  ringBuffer.cpp
pcside/devices/include/: devices.h  espsiteTypes.h  ringbuffer.h
pcside/draw/: CMakeLists.txt  devices.c  graph.cpp
pcside/draw/include/: drawDevices.h  drawGraph.h
pcside/helper/: CMakeLists.txt  helper.cpp
pcside/helper/include/: helperMacros.h  helpertypes.h
pcside/include/: guihelper.h  mainTypes.h
pcside/include/syles/: style_amber.h  style_ashes.h  style_bluish.h  style_candy.h  style_cherry.h  style_cyber.h  style_dark.h  style_default.h  style_enefete.h  style_jungle.h  style_lavanda.h  style_rltech.h  style_sunny.h  style_terminal.h
pcside/rayguiimpl/: CMakeLists.txt
pcside/recorder/: CMakeLists.txt  recorder.cpp
pcside/recorder/include/: recorder.h
pcside/sample/: CMakeLists.txt  samples.cpp
pcside/sample/include/: samples.h
simulator/: go.mod  main.go  readme.md
